# cfmbot

./: .gitignore  Makefile  README.md  config.yaml  discord-bot.py  env.sh.example  main.py  pyproject.toml  telegram-bot.py
common/: upload.py  utils.py
common/providers/: s3.py
models/: mgo_models.py
services/telegram/: bot.py  keyboards.py
src/discord/: bot.py
src/telegram/: bot.py  keyboards.py  messages.py
